# baselibs

./: .bazelignore  .bazelrc  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  BUILD  CMAKE_README.md  CMakeLists.txt  Cargo.toml  MODULE.bazel  README.md  coding-standards.yaml  requirements.in  requirements_lock.txt  versions.json
examples/integration/: .bazelrc  BUILD  MODULE.bazel  README.md  main.cpp
examples/integration/result/: BUILD  result_demo_test.cpp
score/allocator/: BUILD  Cargo.toml  allocator_traits.rs  arena_allocator.rs  atomic.rs  heap_allocator.rs  lib.rs  memory_pool.rs  memory_region.rs  mmap_arena_allocator.rs
score/analysis/tracing/: CMakeLists.txt
score/bitmanipulation/: BUILD  CMakeLists.txt  baselibs_bitmanipulation_arch.rst  bit_manipulation.h  bit_manipulation_test.cpp  bitmanipulation_reqs.rst  bitmask_operators.cpp  bitmask_operators.h  bitmask_operators_test.cpp
score/concurrency/: BUILD  CMakeLists.txt  atomic_indirector.cpp  atomic_indirector.h  atomic_indirector_test.cpp  atomic_mock.cpp  atomic_mock.h  condition_variable_test.cpp  delayed_task.h  delayed_task_test.cpp  executor.h  executor_test.cpp  i_atomic.h  interruptible_interprocess_condition_variable.h  locked_ptr.h  locked_ptr_test.cpp  periodic_task.h  periodic_task_test.cpp  shared_task_result.h  simple_task.h  simple_task_test.cpp  synchronized_queue.h  synchronized_queue_test.cpp  task_result.h  task_result_base.h  task_result_test.cpp  test_types.h  thread_pool.cpp  thread_pool_test.cpp
score/concurrency/atomic/: BUILD  atomic_indirector.cpp  atomic_indirector.h  atomic_indirector_test.cpp  atomic_mock.cpp  atomic_mock.h  i_atomic.h
score/concurrency/design/: architectural_design.md  assumptions_of_use.md  component_requirements.md  safety_analysis.md
score/concurrency/future/: BUILD  CMakeLists.txt  base_interruptible_future.h  base_interruptible_future_test.cpp  base_interruptible_promise.h  base_interruptible_promise_test.cpp  base_interruptible_state.h  base_interruptible_state_test.cpp  error.cpp  interruptible_future.cpp  interruptible_future.h  interruptible_future_test.cpp  interruptible_promise.cpp  interruptible_promise_test.cpp  interruptible_shared_future.cpp  interruptible_shared_future.h  interruptible_shared_future_test.cpp  interruptible_state.cpp  interruptible_state.h
score/concurrency/thread_load_tracking/: BUILD  CMakeLists.txt
score/concurrency/timed_executor/: BUILD  CMakeLists.txt  concurrent_timed_executor.h  concurrent_timed_executor_test.cpp  delayed_task.h  delayed_task_test.cpp  periodic_task.h  periodic_task_test.cpp  timed_executor.h
score/containers/: BUILD  CMakeLists.txt  dynamic_array_test.cpp  intrusive_list_test.cpp  non_relocatable_vector.h  non_relocatable_vector_emplace_back_test.cpp  non_relocatable_vector_special_member_funcs_test.cpp  non_relocatable_vector_test.cpp
score/containers/test/: BUILD  allocator_test_type_helpers.h  fake_memory_resource.cpp  fake_memory_resource.h  fake_memory_resource_test.cpp  fancy_pointer_allocator.cpp  fancy_pointer_allocator.h  fancy_pointer_allocator_test.cpp  mockable_allocator.cpp  mockable_allocator.h  mockable_pointer.cpp  mockable_pointer.h  mockable_pointer_mock_guard.cpp  mockable_pointer_mock_guard.h  pointer_spy_mock.cpp  pointer_spy_mock.h
score/datetime_converter/: CMakeLists.txt  datetime_converter.cpp  datetime_converter.h  datetime_converter_test.cpp
score/filesystem/: BUILD  CMakeLists.txt  README.md  i_standard_filesystem.h  path.cpp  standard_filesystem_fake.cpp  standard_filesystem_fake.h  standard_filesystem_fake_test.cpp  standard_filesystem_mock.h
score/filesystem/design/: structure.puml
score/filesystem/details/: standard_filesystem.cpp  standard_filesystem.h
score/filesystem/factory/: BUILD
score/filesystem/file_utils/: BUILD  file_utils.cpp  file_utils.h  file_utils_fake.cpp  file_utils_mock.h  file_utils_mock_test.cpp  file_utils_test.cpp  i_file_utils.h
score/filesystem/filestream/: BUILD  CMakeLists.txt  file_buf.cpp  file_buf.h  file_factory.cpp  file_stream.cpp  file_stream.h  i_file_factory.h
score/json/: BUILD  CMakeLists.txt  i_json_writer.h  i_json_writer_mock.h  json_parser.cpp  json_serializer.h  json_serializer_test.cpp  json_test.cpp  json_writer.cpp  json_writer.h  json_writer_test.cpp
score/json/detailed_design/: class_diagram.puml
score/json/examples/: BUILD  CMakeLists.txt  logging.json
score/json/internal/: CMakeLists.txt
score/language/: CMakeLists.txt
score/language/futurecpp/: BUILD  CMakeLists.txt
score/language/safecpp/: CMakeLists.txt
score/memory/: BUILD  CMakeLists.txt  split_string_view.cpp  split_string_view.h  string_comparison_adaptor.cpp  string_comparison_adaptor.h  string_comparison_adaptor_test.cpp  string_literal.cpp  string_literal.h
score/memory/design/: README.md
score/memory/shared/: BUILD  CMakeLists.txt  README.md  atomic_indirector.cpp  atomic_indirector.h  atomic_mock.cpp  atomic_mock.h  containers_compatibility_test.cpp  data_type_size_info.cpp  data_type_size_info_test.cpp  i_atomic.cpp  i_atomic.h  lock_file_test.cpp  managed_memory_resource.h  map.h  memory_region_map.cpp  memory_region_map.h  memory_region_map_test.cpp  memory_resource_proxy_test.cpp  memory_resource_registry.cpp  offset_ptr.h  (+23 more)
score/mw/: CMakeLists.txt
score/os/: BUILD  CMakeLists.txt  acl_impl.cpp  cpuid.cpp  fcntl.h  glob.h  glob_impl.cpp  inotify.h  libod.md  mman.cpp  mman.h  mount.h  mqueue.h  netdb.h  semaphore.h  semaphore_impl.cpp  semaphore_impl.h  semaphore_impl_linux.cpp  semaphore_impl_qnx.cpp  sigevent.h  sigevent_impl.cpp  sigevent_impl.h  socket.h  stat.h  stat_impl.cpp  stdio_impl.cpp  toolchain_features.bzl  unistd.h
score/quality/: CMakeLists.txt
score/result/: BUILD  CMakeLists.txt  README.md  error.h  error_msg_mapping.cpp  error_msg_mapping_test.cpp  result.h  result_test.cpp
score/static_reflection_with_serialization/: CMakeLists.txt
score/utils/: BUILD  CMakeLists.txt  base64.cpp  base64_test.cpp  movable_scoped_operation.h  movable_scoped_operation_test.cpp
(+24084 files in other folders)
