# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_baselibs",
    version = "0.2.0",
    compatibility_level = 0,
)

# Configure the EB corbos Linux for Safety Applications (aarch64) toolchain.
bazel_dep(name = "score_toolchains_gcc", dev_dependency=True)
git_override( # Elektrobit corbos Linux for Safety Applications needs a specific toolchain
   module_name = "score_toolchains_gcc",
   remote = "https://github.com/Elektrobit/eclipse-score_toolchains_gcc.git",
   #tag = "0.5.0-alpha", # commit sha: fb009e490b9b8f28805d587f50d0bf6d885f3414
   commit = "1255dd71ffec33e527aef76f86b4fdb3b48e01db",
)
gcc = use_extension("@score_toolchains_gcc//extentions:gcc.bzl", "gcc", dev_dependency=True)
gcc.toolchain(
    url = "https://github.com/Elektrobit/eclipse-score_toolchains_gcc/releases/download/0.5.0-alpha/fastdev-sdk-ubuntu-ebcl-deb-qemu-arm64.tar.xz",
    sha256 = "cf8d277a2b95bbdad3e177c488fa77d01723510690a911218ef33747574d78fe",
    strip_prefix = "fastdev-sdk-ubuntu-ebcl-deb-qemuarm64",
)

# TODO to be moved to toolchain. https://github.com/eclipse-score/toolchains_gcc/issues/11
gcc.extra_features(
    features = [
        "minimal_warnings",
        "treat_warnings_as_errors",
    ],
)
gcc.warning_flags(
    minimal_warnings = ["-Wall", "-Wno-error=deprecated-declarations"],
    strict_warnings = ["-Wextra", "-Wpedantic"],
    treat_warnings_as_errors = ["-Werror"],
)

use_repo(gcc, "gcc_toolchain", "gcc_toolchain_gcc")

# Configure the target toolchain.
bazel_dep(name = "score_toolchains_qnx", version = "0.0.2", dev_dependency=True)
toolchains_qnx = use_extension("@score_toolchains_qnx//:extensions.bzl", "toolchains_qnx", dev_dependency=True)
toolchains_qnx.sdp(
    sha256 = "f2e0cb21c6baddbcb65f6a70610ce498e7685de8ea2e0f1648f01b327f6bac63",
    strip_prefix = "installation",
    url = "https://www.qnx.com/download/download/79858/installation.tgz",
)
use_repo(toolchains_qnx, "toolchains_qnx_sdp")
use_repo(toolchains_qnx, "toolchains_qnx_qcc")

bazel_dep(name = "googletest", version = "1.17.0.bcr.1")
bazel_dep(name = "google_benchmark", version = "1.9.4")

bazel_dep(name = "boost.container", version = "1.87.0")
bazel_dep(name = "boost.interprocess", version = "1.87.0")

bazel_dep(name = "download_utils", version = "1.0.1")

deb = use_repo_rule("@download_utils//download/deb:defs.bzl", "download_deb")

deb(
    name = "acl-deb",
    build = "//third_party/acl:acl.BUILD",
    urls = ["https://launchpadlibrarian.net/581258948/libacl1-dev_2.3.1-1_arm64.deb"],
    visibility = ["//visibility:public"],
)

deb(
    name = "valgrind-deb",
    build = "//third_party/valgrind:valgrind.BUILD",
    urls = ["https://archive.ubuntu.com/ubuntu/pool/main/v/valgrind/valgrind_3.15.0-1ubuntu9.1_amd64.deb"],
    visibility = ["//visibility:public"],
)

deb(
    name = "libcap2-deb",
    urls = ["https://archive.ubuntu.com/ubuntu/pool/main/libc/libcap2/libcap2_2.25-1.2_amd64.deb"],
    visibility = ["//visibility:public"],
)

deb(
    name = "libcap2-dev-deb",
    build = "//third_party/libcap2:libcap2.BUILD",
    urls = ["https://archive.ubuntu.com/ubuntu/pool/main/libc/libcap2/libcap-dev_2.25-1.2_amd64.deb"],
    visibility = ["//visibility:public"],
)

deb(
    name = "libseccomp2-deb",
    urls = ["https://archive.ubuntu.com/ubuntu/pool/main/libs/libseccomp/libseccomp2_2.5.1-1ubuntu1~18.04.2_amd64.deb"],
    visibility = ["//visibility:public"],
)

deb(
    name = "libseccomp2-dev-deb",
       build = "//third_party/libseccomp2:libseccomp2.BUILD",
    urls = ["https://archive.ubuntu.com/ubuntu/pool/main/libs/libseccomp/libseccomp-dev_2.5.1-1ubuntu1~18.04.2_i386.deb"],
    visibility = ["//visibility:public"],
)

bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "bazel_skylib", version = "1.8.1")

bazel_dep(name = "score_crates", version = "0.0.3")

#############################################################
#
# Constraint values for specifying platforms and toolchains
#
#############################################################
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "score_bazel_platforms", version = "0.0.2")
