# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

bazel_dep(name = "score_baselibs", version = "0.0.0")
local_path_override(
    module_name = "score_baselibs",
    path = "../..",
)

bazel_dep(name = "rules_cc", version = "0.2.17")

# Upgrade grpc-java to 1.70.0 for compatibility with newer grpc (1.70.1).
# The transitive grpc dependency (via flatbuffers) resolves to grpc 1.70.1, which removed
# the com_envoyproxy_protoc_gen_validate repo that grpc-java@1.66.0 requires.
single_version_override(
    module_name = "grpc-java",
    version = "1.70.0",
)
