# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

bazel_dep(name = "score_baselibs", version = "0.0.0")
local_path_override(
    module_name = "score_baselibs",
    path = "../..",
)

bazel_dep(name = "rules_cc", version = "0.2.17")

# C++ Toolchain configuration
bazel_dep(name = "score_bazel_platforms", version = "0.1.2")

bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.4", dev_dependency = True)

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_gcc_aarch64_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_x86_64_toolchain",
    sdp_version = "8.0.4",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_aarch64_toolchain",
    sdp_version = "8.0.4",
    target_cpu = "aarch64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    gcc,
    "score_gcc_aarch64_toolchain",
    "score_gcc_x86_64_toolchain",
    "score_qcc_aarch64_toolchain",
    "score_qcc_aarch64_toolchain_pkg",
    "score_qcc_x86_64_toolchain",
    "score_qcc_x86_64_toolchain_pkg",
)

# QNX Image File System (IFS) toolchain configuration (for testing)

bazel_dep(name = "score_rules_imagefs", version = "0.0.3", dev_dependency = True)

imagefs = use_extension("@score_rules_imagefs//extensions:imagefs.bzl", "imagefs", dev_dependency = True)
imagefs.toolchain(
    name = "score_qnx_x86_64_ifs_toolchain",
    sdp_to_import = "@score_qcc_x86_64_toolchain_pkg",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    type = "ifs",
)
imagefs.toolchain(
    name = "score_qnx_aarch64_ifs_toolchain",
    sdp_to_import = "@score_qcc_aarch64_toolchain_pkg",
    sdp_version = "8.0.0",
    target_cpu = "aarch64",
    target_os = "qnx",
    type = "ifs",
)
use_repo(imagefs, "score_qnx_aarch64_ifs_toolchain", "score_qnx_x86_64_ifs_toolchain")

# Testing
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

bazel_dep(name = "score_qnx_unit_tests", version = "0.2.0", dev_dependency = True)
