# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

[package]
name = "allocator"
version.workspace = true
authors.workspace = true
readme.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
path = "lib.rs"

[dependencies]
pal.workspace = true
score_log.workspace = true

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.2", features = ["checkpoint"] }

[lints]
workspace = true
